# abgeordnetenhaus_first_said

./: .gitignore  README.md  example.env  pyproject.toml  requirements.txt  run.sh  setup-cron.sh
.github/workflows/: post.yml  scan.yml
parser/: database.py  db_cleaner.py  dpi_api.py  mastodon_cred.py  migrate_redis_to_sqlite.py  optv_api.py  pardok.py  pdf_extract.py  plenar.py  post_queue.py  text_parse.py
parser/data/: reocr_progress.json  umlaut_merge_map.json  umlaut_merge_plan.json
parser/utilities/: build_protocol_database_online.py  delete_words.py  reocr.py  reocr_batch.py  reprocess_all.py  umlaut_merge.py  word_quality.py
